@@ -5,6 +5,7 @@ XX/XX/2010 - MythBox RC2
  - fixed   : Issue 107 - Database connections are now closed when idle and reconnect on demand.
  - new     : Issue 106 - More responsive fanart lookup based on current list selection
  - fixed   : Issue 108 - Focus changes to Play+Skip button in Recording Details screen after user has already switched focus to another button
+ - new     : Issue 109 - Enable navigation from the Settings screen to the XBMC settings screen
  
 06/08/2010 - MythBox RC1
 =============================
